SUBDIRS_MAIN = ui                                         \
               tpd_common                                 \
               tpd_GL                                     \
               tpd_DB                                     \
               tpd_ifaces                                 \
               tpd_parser                                 \
               tpd_bidfunc                                \
               src                                        \
               fonts                                      \
               icons                                      \
               icons/16x16                                \
               icons/24x24                                \
               icons/32x32                                \
               icons/48x48                                \
               tll                                        \
               utils/cadence
SUBDIRS =   $(SUBDIRS_MAIN)
ACLOCAL_AMFLAGS = -I macros
