iconsdir = $(pkgdatadir)/icons
EXTRA_DIST =           box16x16.png  \
                      copy16x16.png  \
             cut_with_poly16x16.png  \
                    delete16x16.png  \
                  edit_pop16x16.png  \
                 edit_push16x16.png  \
                     flipx16x16.png  \
                     flipy16x16.png  \
                      move16x16.png  \
                       new16x16.png  \
                      open16x16.png  \
                      poly16x16.png  \
                      redo16x16.png  \
               rotate_left16x16.png  \
              rotate_right16x16.png  \
                     ruler16x16.png  \
                      save16x16.png  \
                      text16x16.png  \
                      undo16x16.png  \
                      wire16x16.png  \
                  zoom_all16x16.png  \
                   zoom_in16x16.png  \
                  zoom_out16x16.png 

icons_DATA =           box16x16.png  \
                      copy16x16.png  \
             cut_with_poly16x16.png  \
                    delete16x16.png  \
                  edit_pop16x16.png  \
                 edit_push16x16.png  \
                     flipx16x16.png  \
                     flipy16x16.png  \
                      move16x16.png  \
                       new16x16.png  \
                      open16x16.png  \
                      poly16x16.png  \
                      redo16x16.png  \
               rotate_left16x16.png  \
              rotate_right16x16.png  \
                     ruler16x16.png  \
                      save16x16.png  \
                      text16x16.png  \
                      undo16x16.png  \
                      wire16x16.png  \
                  zoom_all16x16.png  \
                   zoom_in16x16.png  \
                  zoom_out16x16.png 

#                    toped_16x16.png                               toped_32x32.png        toped_64x64.png \
#                       box16x16.png           box24x24.png           box32x32.png           box48x48.png \
#                      copy16x16.png          copy24x24.png          copy32x32.png          copy48x48.png \
#             cut_with_poly16x16.png cut_with_poly24x24.png cut_with_poly32x32.png cut_with_poly48x48.png \
#                    delete16x16.png        delete24x24.png        delete32x32.png        delete48x48.png \
#                  edit_pop16x16.png      edit_pop24x24.png      edit_pop32x32.png      edit_pop48x48.png \
#                 edit_push16x16.png     edit_push24x24.png     edit_push32x32.png     edit_push48x48.png \
#                     flipx16x16.png         flipx24x24.png         flipx32x32.png         flipx48x48.png \
#                     flipy16x16.png         flipy24x24.png         flipy32x32.png         flipy48x48.png \
#                      move16x16.png          move24x24.png          move32x32.png          move48x48.png \
#                       new16x16.png           new24x24.png           new32x32.png           new48x48.png \
#                      open16x16.png          open24x24.png          open32x32.png          open48x48.png \
#                      poly16x16.png          poly24x24.png          poly32x32.png          poly48x48.png \
#                      redo16x16.png          redo24x24.png          redo32x32.png          redo48x48.png \
#               rotate_left16x16.png   rotate_left24x24.png   rotate_left32x32.png   rotate_left48x48.png \
#              rotate_right16x16.png  rotate_right24x24.png  rotate_right32x32.png  rotate_right48x48.png \
#                     ruler16x16.png         ruler24x24.png         ruler32x32.png         ruler48x48.png \
#                      save16x16.png          save24x24.png          save32x32.png          save48x48.png \
#                      text16x16.png          text24x24.png          text32x32.png          text48x48.png \
#                      undo16x16.png          undo24x24.png          undo32x32.png          undo48x48.png \
#                      wire16x16.png          wire24x24.png          wire32x32.png          wire48x48.png \
#                  zoom_all16x16.png      zoom_all24x24.png      zoom_all32x32.png      zoom_all48x48.png \
#                   zoom_in16x16.png       zoom_in24x24.png       zoom_in32x32.png       zoom_in48x48.png \
#                  zoom_out16x16.png      zoom_out24x24.png      zoom_out32x32.png      zoom_out48x48.png
