tlldir = $(pkgdatadir)/tll
EXTRA_DIST = seed.tll tcase.tll laylogic.tll \
             user_functions/general/examples/config.tll            \
             user_functions/general/examples/test_performance.tll  \
             user_functions/general/examples/test_wire.tll         \
             user_functions/general/geometry.tll                   \
             user_functions/general/helper.tll                     \
             user_functions/general/wires.tll                      \
             user_functions/technology/default_drc.tll

tll_DATA = seed.tll tcase.tll laylogic.tll \
             user_functions/general/examples/config.tll            \
             user_functions/general/examples/test_performance.tll  \
             user_functions/general/examples/test_wire.tll         \
             user_functions/general/geometry.tll                   \
             user_functions/general/helper.tll                     \
             user_functions/general/wires.tll                      \
             user_functions/technology/default_drc.tll

